[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
httparse = "1.10"
http = "1.3"
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.5"
threadpool = "1.8"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
parking_lot = "0.12"

[dev-dependencies]
nix = "0.29"
hyper = { version = "0.14", features = ["full"] }
reqwest = "0.12"
async-trait = "0.1"